# kigstudio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/test/: block.stl
assets/test/test/: source.stl  圆柱.stl  斜圆柱.stl  板 (2).stl  板 (3).stl  板.stl  硬假发重建_交叉.stl  硬假发重建_悬空遮挡.stl  硬假发重建_无交叉.stl  硬假发重建_遮挡.stl  符玄假发锥化测试.stl  锥化.stl  长方体.stl
assets/test/test_model1/: 1.mtl
cli/: cli.h  mesh_repair.h  simplifyMesh.h
flow/: main.cpp
scripts/: build_shader.bat  fetch_deps.bat  fetch_deps.sh  find_func.py
scripts/cmake_modules/: FindBoost.cmake
shader/base/: fs_deferred_collision.glsl  fs_deferred_combine.glsl  fs_mesh_base.glsl  fs_mesh_gbuffer.glsl  fs_mesh_stencil.glsl  vs_mesh_base.glsl  vs_mesh_gbuffer.glsl  vs_volume_pos.glsl
src/kigstudio/cgal/: convex_hull.cpp  convex_hull.h  mesh_repair.cpp  mesh_repair.h  mesh_simplification.cpp  mesh_simplification.h  poisson_reconstruction.cpp  poisson_reconstruction.h  poisson_utils.cpp  poisson_utils.h  skeleton_extraction.cpp  skeleton_extraction.h
src/kigstudio/mesh/: conebox.cpp  conebox.h  conebox_old.cpp  conebvh.cpp  conebvh.h  octree.cpp  octree.h  svo.h
src/kigstudio/sdf/: sdf.cpp  sdf.h  sdf_SweepBezier.cpp  sdf_SweepBezier.h  sdf_chain_joint.cpp  sdf_chain_joint.h  sdf_mesh.cpp  sdf_mesh.h  sdf_shape.cpp  sdf_shape.h
src/kigstudio/ui/: logger.h  render_axis_gizmo.h  render_collision.h  render_deferred.h  render_mesh.h  render_voxel.h  render_voxel_list.h  utils.h
src/kigstudio/utils/: KDTree.cpp  KDTree.h  compress.h  dbvt3d.h  generator.h  locale.cpp  locale.h  mat.h  mempool.h  plane.h  process.h  vec2.h  vec3.h
src/kigstudio/voxel/: collision.h  concave.cpp  concave.h  lut.h  mesh_voxelizer.h  octree.cpp  octree.h  triangle_bvh.h  voxel.h  voxel2mesh.cpp  voxel2mesh.h  voxel2mesh_sdf.cpp  voxel2mesh_sdf.h  voxel_FEA.cpp  voxel_bone.cpp  voxel_boolean.cpp  voxel_edt.cpp  voxel_edt.h  voxel_loader.cpp  voxel_search.cpp  voxelizer.cpp  voxelizer_svo.h
tests/: test_common.h  test_conebox.cpp  test_conebvh.cpp  test_dbvt.cpp  test_geo_collision.cpp  test_imgui.cpp  test_matchingcube.cpp  test_octree.cpp  test_ogre.cpp  test_ray.cpp  test_sov.cpp  test_svo.cpp  test_view.cpp  test_view_stl.cpp  test_voxelizer.cpp
ui/: font.h  license.h  locale.cpp  locale.h  main.cpp  render.hpp  render_deferred.cpp  render_deferred.h  render_voxel_list.cpp  render_voxel_list.h  render_voxel_list_history.cpp  render_voxel_list_icon.cpp  render_voxel_list_loader.cpp  render_voxel_list_nav_map.cpp  render_voxel_list_task.cpp  render_voxel_list_thumbnail.cpp  render_voxel_list_ui.cpp  render_voxel_list_ui_editor_concave.cpp  render_voxel_list_ui_flow.cpp  render_voxel_list_ui_history.cpp  render_voxel_list_ui_objecteditor.cpp  render_voxel_list_ui_utils.cpp  render_voxel_render.cpp  render_voxel_render_geo.cpp  ui.hpp  utils.cpp  utils.h
